# openvino

./: ov_pmu.txt
docs/OV_Runtime_UG/: Operations_specifications.md
docs/ops/: opset9.md
docs/template_plugin/backend/: evaluates_map.cpp  opset_int_tbl.hpp
docs/template_plugin/src/: CMakeLists.txt
inference-engine/src/inference_engine/: CMakeLists.txt  cnn_network_ngraph_impl.cpp
multiclass_nms_ngraph/: generate_multiclass_nms.py
multiclass_nms_ngraph/include/: multiclass_nms.hpp
multiclass_nms_ngraph/src/: main.cpp  multiclass_nms.cpp
ngraph/: CMakeLists.txt
ngraph/core/include/ngraph/opsets/: opset8_tbl.hpp
ngraph/frontend/paddlepaddle/src/: frontend.cpp  op_table.cpp
ngraph/frontend/paddlepaddle/src/op/: batch_norm.cpp  matrix_nms.cpp  multiclass_nms.cpp  pool2d.cpp  range.cpp  slice.cpp  yolo_box.cpp
ngraph/python/: requirements_test.txt
ngraph/python/src/ngraph/: __init__.py
ngraph/test/: CMakeLists.txt
ngraph/test/backend/: multiclass_nms.in.cpp
ngraph/test/files/paddlepaddle/gen_scripts/: compare_tool.py  generate_batch_norm.py  generate_deformable_conv.py  generate_matrix_nms.py  generate_multiclass_nms.py  generate_pool2d.py  generate_yolo_box.py  multiclass_nms.py  multiclass_nms3_dgraph.py  multiclass_nms3_ngraph.py  nms3_debug.py  runtime.py  save_model.py  test.py
ngraph/test/files/paddlepaddle/models/: models.csv
ngraph/test/files/paddlepaddle/models/batch_norm1/: __model__  batch_norm1.pdmodel
ngraph/test/files/paddlepaddle/models/batch_norm2/: __model__  batch_norm2.pdiparams  batch_norm2.pdmodel  bias2  bn_mean  bn_variance2  output0.npy
ngraph/test/frontend/paddlepaddle/: op.cpp  op_fuzzy.cpp
ngraph/test/frontend/paddlepaddle/test_models/gen_scripts/: generate_deformable_conv.py  generate_layer_norm.py  nms.py
ngraph/test/frontend/shared/include/: op_fuzzy.hpp
ngraph/test/frontend/shared/src/: op_fuzzy.cpp
ngraph/test/runtime/interpreter/: evaluates_map.cpp  opset_int_tbl.hpp
nms_dyn/: CMakeLists.txt  generate_multiclass_nms.py
nms_dyn/src/: main.cpp  multiclass_nms.cpp
nms_ngraph/: CMakeLists.txt
nms_ngraph/src/: main.cpp  multiclass_nms.cpp
src/common/transformations/src/transformations/: convert_precision.cpp
src/common/transformations/src/transformations/common_optimizations/: common_optimizations.cpp  moc_transformations.cpp
src/core/include/openvino/op/: ops.hpp  scaled_dot_product_attention.hpp
src/core/include/openvino/opsets/: opset9_tbl.hpp
src/core/tests/: CMakeLists.txt
src/core/tests/frontend/paddle/: op_fuzzy.cpp
src/core/tests/frontend/paddle/test_models/gen_scripts/: generate_multiclass_nms.py
src/core/tests/frontend/paddlepaddle/: op_fuzzy.cpp
src/frontends/paddlepaddle/src/: frontend.cpp  model.cpp
src/frontends/paddlepaddle/src/internal/pass/: transform_if.cpp
src/frontends/pytorch/src/: frontend.cpp
src/frontends/pytorch/src/op/: where.cpp
src/plugins/intel_cpu/: CMakeLists.txt
src/plugins/intel_cpu/src/: cpu_memory.cpp  cpu_types.cpp  cpu_types.h  dnnl_descriptor.h  exec_network.cpp  graph.cpp  graph.h  graph_context.h  graph_optimizer.cpp  infer_request.cpp  memory_state.h  node.cpp  node.h  nodes_factory.cpp  output_mem_mgr.cpp  output_mem_mgr.h  plugin.cpp
src/plugins/intel_cpu/src/memory_desc/: cpu_memory_desc_utils.cpp
src/plugins/intel_cpu/src/ngraph_transformations/: convert_to_cpu_specific_opset.hpp  detect_augrucell.cpp  detect_augrucell.hpp
src/plugins/intel_cpu/src/ngraph_transformations/op/: augru_cpu.cpp  augru_cpu.hpp  augruseq_cpu.cpp  augruseq_cpu.hpp
src/plugins/intel_cpu/src/nodes/: if.cpp  if.h  memory.cpp  memory.hpp  multiclass_nms.cpp  multiclass_nms.hpp  rnn.cpp  rnn.h  scaled_attn.cpp  tensoriterator.cpp  tensoriterator.h
src/plugins/intel_cpu/src/nodes/kernels/scaled_attn/: attn_memcpy.cpp  mha_single_token.cpp  mha_single_token.hpp
src/plugins/intel_cpu/src/onednn/: iml_type_mapper.cpp
src/plugins/intel_cpu/src/transformations/: transformation_pipeline.cpp
src/plugins/intel_cpu/src/transformations/cpu_opset/common/op/: sdpa.cpp  sdpa.hpp
src/plugins/intel_cpu/src/transformations/cpu_opset/common/pass/: stateful_transpose_sdpa_fusion.cpp  stateful_transpose_sdpa_fusion.hpp
src/plugins/intel_cpu/src/transformations/cpu_opset/x64/pass/: causal_mask_fusion.cpp
src/plugins/intel_cpu/src/utils/: debug_capabilities.cpp  debug_capabilities.h  dumb_vm.hpp  plain_tensor.hpp  profiler.cpp  profiler.hpp
src/plugins/intel_cpu/tests/functional/single_layer_tests/: loop.cpp
src/plugins/intel_cpu/tests/functional/subgraph_tests/src/: concat_sdp.cpp  concat_transpose_sdp_transpose.cpp  if_subgraph.cpp  init_state_graph.cpp  stateful_model.cpp
src/plugins/intel_gpu/src/graph/: primitive_inst.cpp
src/tests/functional/plugin/cpu/shared_tests_instances/behavior/ov_plugin/: caching_tests.cpp
src/tests/functional/shared_test_classes/: CMakeLists.txt
src/tests/functional/shared_test_classes/src/base/: ov_subgraph.cpp
src/tests/functional/shared_test_classes/src/single_layer/: multiclass_nms.cpp
